# llm_app

./: note  pyproject.toml
llm_app/: configs.py  test.ipynb
llm_app/databases/meta/: chunks.parquet  meta_docs.json
llm_app/databases/vector/0130843b-b6e8-47ee-975b-2e2a04ad4cec/: index_metadata.pickle
llm_app/databases/vector/592cdff0-739a-4fa2-8f39-ed21b386ae4a/: index_metadata.pickle
tests/: test_llm_app.py
