[tool.poetry]
name = "llm_app"
version = "0.1.0"
description = ""
authors = ["ndtands <ndtan.hcm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fitz = "^0.0.1-alpha.2"
PyMuPDF = "^1.22.5"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
numpy = "^1.25.1"
Pillow = "^10.0.0"
tqdm = "^4.65.0"
chromadb = "^0.4.2"
openai = "^0.27.8"
tabula = "^1.0.5"
pypdf = "^3.12.2"
tabula-py = "^2.7.0"
pdfplumber = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
